# rust-infostealer-parser

./: .gitignore  Cargo.toml  README.md
src/: extract.rs  header.rs  lib.rs  model.rs  util.rs
src/credential/: meta.rs  mod.rs
src/user_information/: meta.rs  mod.rs
test_data/: BRADMAX_Passwords.txt  BRADMAX_UserInformation.txt  GODELESS CLOUD.rar  MANTICORE_Passwords.txt  MANTICORE_UserInformation.txt  META_Passwords.txt  META_UserInformation.txt  REDLINE_Passwords.txt  REDLINE_UserInformation.txt
